--- a/report.tex
+++ b/report.tex
@@ -69,12 +69,12 @@ Artist identification is the task of recognizing the author of a painting given 
 	\item the available datasets are not as large as those used by models which solve more common tasks, such as image classification (e.g. Imagenet \cite{imagenet});
 	\item artist's style could change a lot through his works, or it could be influenced by other painters. Therefore, it is clear how much is complicated to correctly classify a painting. 
 \end{itemize}
-Usually this task is done by human experts because of its difficulty, so our contribution can help to automatize the catalogation of artworks, which is more and more important due to the increasing number of  digital archives. In addition, our work could be useful in art forgeries detection.\\
+Usually this task is done by human experts because of its difficulty, so our contribution can help to automatize cataloging of artworks, which is more and more important due to the increasing number of  digital archives. In addition, our work could be useful in art forgeries detection.\\
 Our approach involves 3 different CNNs, AlexNet (\cite{alexnet}), GoogLeNet (\cite{googlenet}) and ResNeXt (\cite{resneXt}), trained from scratch and with transfer learning in order to compare these opposite techniques. Our experiments yielded a top-1 accuracy of 82\%  and a top-3 accuracy of 94\% as best result.\\
 
 
 The rest of the essay is structured as follows: in section \ref{relwor} we discuss  similarities and differences between previous works and ours. In section \ref{dataset} we explain the dataset we have used, how it was created and which preprocessing and data augmentation techniques we have exploited. In section\ref{method}
-we discuss our approach for solving the problem we have just described. In \ref{experiments} we show some details regarding the \textit{GCloud Compute Engine}'s configuration, the metrics used to evaluate the goodness of the models and the detailed results of our experiments. Finally, in section \ref{conclusions} we draw some conclusion and we outline some possibile future works which rely on our result.
+we discuss our approach for solving the problem we have just described. In \ref{experiments} we show some details regarding the \textit{GCloud Compute Engine}'s configuration, the metrics used to evaluate the goodness of the models and the detailed results of our experiments. Finally, in section \ref{conclusions} we draw some conclusion and we outline some possible future works which rely on our result.
 
 
 \section{Related Works}\label{relwor}
@@ -82,8 +82,8 @@ we discuss our approach for solving the problem we have just described. In \ref{
 In this section we show some previous works related to ours. In addition to define the references of our experiments, the following should further convince the reader of present-day difficulty in achieving good precision in artist identification.\\
 Recently CNNs have become widespread, because of the good performance and results obtained in tasks regarding visual recognition.
 Previous works not regarding CNNs use some famous approaches of features detection, such as Scale Invariant Feature Transforms (SIFT) and Histograms of oriented gradients (HOG) (\cite{Saleh2015}, \cite{mensink2014}, \cite{lombardi05}, \cite{jou2011}), to extract some particular characteristics of the painting useful for its classification. These works have in common the use of an SVM 1-vs-rest classifier, except \cite{jou2011}, which uses both SVM 1-vs-rest and Naïve Bayes classifier, and \cite{lombardi05}, which uses k-nearest neighbors and hierarchical clustering. However, \cite{lombardi05} and \cite{jou2011} face up the problem of style recognition, which is different than artist identification, but using similar approaches.\\
-In addition, some of these perform on small or not so heterogenous datasets, such as \cite{mensink2014} which uses the artworks of a single museum, or \cite{jou2011} which focuses on only 5 artists. Instead, in our work we set our sights on recognizing 23 different artists, with 450 paintings for each of them as our dataset. \\
-In any case, these techniques are known to be not so effective due to the fact that features characterizing an artist's style can be many and difficult to engineer, such as texture, shape, color, tone, variety, proportion, pattern and brush strokes.\\
+In addition, some of these perform on small or not so heterogeneous datasets, such as \cite{mensink2014} which uses the artworks of a single museum, or \cite{jou2011} which focuses on only 5 artists. Instead, in our work we set our sights on recognizing 23 different artists, with 450 paintings for each of them as our dataset. \\
+In any case, these techniques are known to be not so effective due to the fact that features characterizing an artist's style can be many and difficult to engineer, such as texture, shape, colour, tone, variety, proportion, pattern and brush strokes.\\
 
 One of the results achieved in \cite{hong2017} shows an improvement of performance using CNNs up to 13.6 percentage points more than SIFT, HOG or similar.  This work aims to detect artwork that violates copyright terms in television programs, TV series, movies or similar scenarios. They use different techniques to distort the images on their dataset in order to simulate potential situation that it would be appeared on TV programs or photographs or
 movies. This is not suitable for our context because distortion would be harmful for artist identification.\\
@@ -99,12 +99,12 @@ In the latest years, the number of CNNs for visual recognition is growing, as we
 \subsection{Overview}\mbox{}\\
 The first requirement to train a CNN for artist identification is a dataset, concerning paintings of different artist, as large as possible. For our project we obtain a dataset from \cite{ArtGANDataset}, which is a subset of the WikiArt Dataset. \\
 The dataset contains about 19,000 images of 23 different artists, regarding very different styles, genres  and epochs. There are also 3 \textit{.csv} files that labelled all the paintings for genre, style, and artist: for our work we have used only the last one. In order to obtain a balanced dataset, we decided to randomly select 450 paintings for each artist, so in the end our dataset contains of 10,350 total images. \\
-The next step was to divided the entire dataset in training, validation and test sets. \cite{ArtGANDataset} suggests a possibile partitioning, but we decided to create our own because they did not provide a test set, and some paintings included in the training set are also in the validation set, fact that could create a distorted evaluation of our model during training. Therefore, we split the dataset in training, validation and test sets using a 80-10-10 division per artist, obtaining a training set of 360 paintings per artist, and a validation and test sets each of 45 paintings per artist.
+The next step was to divided the entire dataset in training, validation and test sets. \cite{ArtGANDataset} suggests a possible partitioning, but we decided to create our own because they did not provide a test set, and some paintings included in the training set are also in the validation set, fact that could create a distorted evaluation of our model during training. Therefore, we split the dataset in training, validation and test sets using a 80-10-10 division per artist, obtaining a training set of 360 paintings per artist, and a validation and test sets each of 45 paintings per artist.
 
 \subsection{Preprocessing and Data augmentation}\mbox{}\\
 CNNs require a precise size for their input images, so we had to modify the paintings in the dataset, considering that they vary widely in shape and size.\\
 So, first, we take a 224$\times$224 crop of each input images, next we zero-center and normalize them, with mean and standard deviation calculated for each of the three channels red, green and blue (they are RGB images).  \\
-During training we also randomly horizontally flip the image with a probability of 50\%, and also take a random crop of it (not always the central pixels), for essentialy two reasons:
+During training we also randomly horizontally flip the image with a probability of 50\%, and also take a random crop of it (not always the central pixels), for essentially two reasons:
 \begin{itemize}
 	\item randomness create variety and can avoid overfit;
 	\item we assumed that the style of an artist is present everywhere in the painting, so taking random crops do not influence the performance of our models.
@@ -120,7 +120,8 @@ cross-entropy loss:
 \begin{equation}
 L_{i}=-\log \left(\frac{e^{f_{y_{i}}}}{\sum_{j} e^{f_{j}}}\right)
 \end{equation}
-\textbf{SPIEGARE}
+Where $L_{i}$ represent the loss for the example $i$ in the minibatch, $f$ the output of the network for all 23 classes, $y_{i}$ the ground truth class of the example $i$, and $j$ is one of the possible class. 
+We have chosen this loss function because it is the most common one in multi-class classification problem.
 
 First, we have trained the networks from scratch, in order to allow them to learn features solely for artist identification. \\
 Afterwards, starting from networks with weights pre-trained on ImageNet dataset, we trained them using transfer learning to understand if a features representation from ImageNet is a valuable starting point for our problem.\\
@@ -140,10 +141,9 @@ We decided to include AlexNet in our work because it represent the most importan
 	\caption{AlexNet's architecture}
 	\label{fig:alexnet}
 \end{figure}
-
+\newpage
 \subsection{GoogLeNet}
-GoogLeNet (\cite{googlenet}) won the ILSVRC 2014 achieving 6.67\% top-5 error on ImageNet. We considered this netowrk in our work PERCHè HA OTTENUTO IMPROVMENT NOTEVOLE DALL'ANNO PRECEDENTE, QUINDI INTRODUCENDO INNOVAZIONE CHE EFFETTI AMENTE FUNZONAO.
-It is composed of 22 layers, with different innovations regarding the fully-connected layers, the vanishing gradient problem and a new inception module.\\
+GoogLeNet (\cite{googlenet}) won the ILSVRC 2014 achieving 6.67\% top-5 error on ImageNet. It is composed of 22 layers, with different innovations regarding the fully-connected layers, the vanishing gradient problem and a new inception module.\\
 An interesting addition to the architecture is to change the second last fully-connected layer with an average pooling layer. This layer spatially averages the feature map, converting 7x7x1024 input to 1x1x1024, reducing the computation and the number of parameters, by a factor of 49. This average pooling layer is finally followed by a normal fully-connected layer with 1000 neurons (and 1024x1000 parameters), for the 1000 ImageNet classes.
 During training, to address the vanishing gradient problem, special extra structures are added to the network (these are removed during testing). These are auxiliary classifiers attached to intermediate layers. All the losses from each classifier gets added up, taking contribution from the auxiliary classifier lower
 than the main one, during training. The gradient from the main classifier which would have otherwise become very small, and thus slowing training, by time it reached the lower initial layers, receives gradient from the auxiliary classifiers and thus the net gradient becomes big enough to allow training to progress.
@@ -169,11 +169,11 @@ A method to reduce the number of computation is dimensionality reduction. This i
 
 
 
-\subparagraph{ResNeXt}
+\subsection{ResNeXt}
 ResNeXt (\cite{resneXt})was the first runner up in ILSVRC 2016, achieving 3.03\% top-5 error rate, which is a better result than human precision on the same dataset (5.1\% error). The model's name, ResNeXt, contains Next. It means the next dimension, on top of the ResNet, namely the winner in ILSVRC 2015. This next dimension is called the “cardinality” dimension.\\
 The architecture adopts VGG/ResNets' strategy of repeating layers, while
-exploiting the split-transform-merge strategy (for example inception modules have the same approch, that is, input is split into a few lower-dimensional embeddings, transformed by a set of specialized filters, and merged by concatenation). 
-A module in this network performs a set of transformations, each on a low-dimensional embedding, whose outputs are aggregated by summation. The transformations to be aggregated are all of the same topology (Figure \ref{fig:resnext_block} (right)).\\
+exploiting the split-transform-merge strategy (for example inception modules have the same approach, that is, input is split into a few lower-dimensional embeddings, transformed by a set of specialized filters, and merged by concatenation). 
+A module in this network performs a set of transformations, each on a low-dimensional embedding, whose outputs are aggregated by summation. The transformations to be aggregated are all of the same topology (Figure \ref{fig:resnext_block}).\\
 
 \begin{figure}[h]
 	\centering
@@ -221,7 +221,6 @@ The training of the models and the experiments were performed on a virtual machi
 
 For each CNN, we tested their performance with different learning rate values ($10^{-2}, 10^{-3}, 10^{-4}, 10^{-5}$). We have observed that $10^{-3}$ is the value which allows to converge faster to the best results, thus all experiments we have performed use this learning rate.\\
 In Figure \ref{fig:lr} we report ResNeXt's performance based on these different values, where it's clear that the lowest value of learning rate slows down the training phase, instead higher values ($10^{-2}$) bring more instability in the accuracy trend.
-
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=.5\textwidth]{graphs/lr_scratch}\hfill
@@ -229,15 +228,13 @@ In Figure \ref{fig:lr} we report ResNeXt's performance based on these different 
 	\caption{Top-1 accuracies for ResNeXt's validation set with different learning rates}
 	\label{fig:lr}
 \end{figure}
-
-\textbf{We chose the Adam's update rule because the experiments using SGD were worse. \textbf{Abbiamo impostato il }learning rate $= 10^{-3}$ mentre per gli altri papametri we used the default ones, i.e. $\beta_{1}  = 0.9$ and $\beta_{2} = 0.999$.  \textbf{MA COSA SONO beta1 e BETA2}}\\
-In transfer learning training, we set respectively the number of epochs and batch size to 16 and 32.  For each model chosen, pytorch makes available their final weights  trained on the ImageNet dataset (\cite{imagenet}), which makes transfer learning very easy to implement.\\
-We first start training the network updating the weights only in the FC-layers, but the results obtained were not satisfactory.\\
+We chose the Adam's update rule because experiments using SGD obtained worse performances. Learning rate was set to $10^{-3}$, following experiments shown previously, while for the other parameters we used the default values, i.e. $\beta_{1}  = 0.9$ and $\beta_{2} = 0.999$.\\
+In transfer learning training, we set respectively the number of epochs and batch size to 16 and 32.  For each model chosen, Pytorch makes available their final weights  trained on the ImageNet dataset (\cite{imagenet}), which makes transfer learning very easy to implement.\\
+We first start training the network updating the weights only in the fully-connected layers, but the results obtained were not satisfactory.\\
 With the aim of achieving higher accuracy, as experimented in \cite{ArtistIdCNN406}, we have decided to allow the update of the weights in the whole network when, for 3 consecutive epochs, the validation set's accuracy does not improve by 3 percentage points. When this condition occurs, learning rate is decreased by a factor of 10. This strong decrease is motivated by the hypothesis  that pre-trained weights are already "close" to those we are looking for, so it is good to update them with a smaller step-size.
 
 In training from scratch, the number of epochs is set to 20, while the batch size is still 32.\\ 
-Initialisation of the weights follows a uniform distribution in $[-x, x]$ where $x=1/\sqrt n$ and $n$ is the number of inputs to a given neuron (\textbf{STA COSA È DA VERIFICARE})\\
-We have experimented what in pytorch is called \textit{scheduler}, i.e. every 7 epochs the learning rate is decreased by a factor of 10 . This strategy, however, has not led to improvements and in fact the results exposed have been obtained without the use of this technique.
+We have experimented what in Pytorch is called \textit{scheduler}, i.e. every 7 epochs the learning rate is decreased by a factor of 10. This strategy, however, has not led to improvements and in fact the results exposed have been obtained without the use of this technique.
 
 In order to evaluate all the models that we study, we have calculated the accuracy on training and validation sets for each epochs during training, and the final accuracy on test set using the best weights resulted from training. The accuracy is intended as top-1, i.e.  the fraction of paintings whose artists are identify correctly, and top-3, i.e. the fraction of paintings whose artists are included in the 3 to whom the model has assigned the highest score.
 
@@ -261,7 +258,7 @@ In order to evaluate all the models that we study, we have calculated the accura
 \end{table}
 \subsection{Results}\label{results}
 
-In table \ref{table} we report the overall results obtained with training  from scratch and transfer learning for each CNN, including also the results obtained in \cite{ArtistIdCNN406}, \cite{Saleh2015} and \cite{mensink2014}.
+In Table \ref{tab:results} we report the overall results obtained with training  from scratch and transfer learning for each CNN, including also the results obtained in \cite{ArtistIdCNN406}, \cite{Saleh2015} and \cite{mensink2014}.
 
 The first thing we observe, comparing the CNNs, is that AlexNet's performances are much worse than other CNNs for all experiments, thus we can deduce how network's complexity allows to achieve better results. In fact, GoogLeNet and ResNeXt are successors of AlexNet, so this outcome should not be surprising. 
 In particular, in training from scratch, AlexNet is 20 percentage points worse than others CNNs, while in training with transfer learning this distance is halved. This result shows that transfer learning performs very well in order to achieve quite good accuracy, even with not so complex networks. Indeed, AlexNet has obtained 87\% of top-3 accuracy in the test set.
@@ -279,20 +276,20 @@ The most performing CNN is ResNeXt trained with transfer learning. Its top-1 acc
 Figure \ref{fig:confusion} shows the confusion matrix concerning our best network's classification on test set. Each row represents the true artist and each column represents the predicted one. Ideally, we want as many predictions as possible to be concentrated on the diagonal as this means that the network correctly predicted the true artist. The maximum possible value for a cell in the confusion matrix is 45, since there are 45 paintings per artist in the test set.\\
 In general, we can easily see how the majority of artifacts are well-classified thanks to the colours (from yellow to brown) on the diagonal cell, i.e. more than 30 painting for each artist are well classified.
 
-In particular, the artits better classified (44 out of 45) are Eugene Bodin, Ivan Aivazovsky and Raphael Kirchner. In fact, even though these artists may belong to differents artistic movements and styles, their painting tends to represent the world very close to reality (\textbf{figura ?? show some example}).\\
+In particular, the artist better classified (44 out of 45) are Eugene Bodin, Ivan Aivazovsky and Raphael Kirchner. In fact, even though these artists may belong to different artistic movements and styles, their painting tends to represent the world very close to reality.\\
 For example, Ivan Aivazovsky produced many portraits and landscapes, over half of all of his paintings are realistic depictions of coastal scenes and seascapes. The manner of painting real scenario or objects makes artist classification very similar to image classification. Indeed, from our results we note that artists with this characteristic obtained an higher accuracy.
 
 For the artists whose paintings are often misclassified, we have noticed some common traits which follows.\\
-Some of them belong to movements such as surrealism, cubism or expressionism, thus their artefacts are not depicting real scenario (\textbf{esempi}), making them harder to classify.
+Some of them belong to movements such as surrealism, cubism or expressionism, thus their artefacts are not depicting real scenario, making them harder to classify.
 For example, Pablo Picasso, who founded the cubism movement, is the most misclassified artist (30 correctly classified out of 45).\\
 The second reason leading to misclassification is the similarity  between different artists. The most striking example regards Ilya Repin, in fact, as we can see in Figure \ref{fig:confusion} (9th row, 2nd column), the model has classified Boris Kustodiev as authors of 8 Repin's artworks. This is not so surprising since Repin was the Kustodiev's teacher, influencing significantly his style. \\
 Another reason concerns artists that, during their life, changed their art style significantly, producing very various type of paintings. For example in Figure \ref{fig:vangogh} we can see 2 very different Van Gogh's artworks. This complicates furthermore the classification, leading to worse performance (accuracy on Van Gogh is 33 out of 45).
 
 In Figure \ref{fig:accscratch}, for each CNN trained from scratch,  we report the top-1 accuracy trends on training and validation set. What we can notice is that both trends are very close each other, proving a very low level of overfitting.
-From this fact, we deduced that with a wider dataset and an higher number of epochs, we could obtained better performances. Therefore, we have decided to test once our best network for 30 epochs. We didn't extend this kind of experiment to all networks due to our limited Google Cloud's resources. As we expected, ResNeXt's accuracy trend \textbf{kept increasing} without introducing overfitting, improving both accuracies by 8 percentage points on test set.
+From this fact, we deduced that with a wider dataset and an higher number of epochs, we could obtained better performances. Therefore, we have decided to test once our best network for 30 epochs. We didn't extend this kind of experiment to all networks due to our limited Google Cloud's resources. As we expected, ResNeXt's accuracy increased without introducing overfitting, improving both accuracies by 8 percentage points on test set.
 
-In figure \ref{fig:acctransfer}, instead, we see the trends for each CNN trained with transfer learning. In all of them, after few epochs, an increase in the trend's slope is noted. This corresponds to the moment when the network is allowed to update not only the FC-layers' weights, but also those of all layers as previous explained in \ref{ImplDet}, adapting the whole CNN to artist identification task.\\
-Moreover, we can see that GoogLeNet and ResNeXt, aftew roughly 10 epochs, are affected by overfitting. In fact there is an incresing difference between training accuracy and validation accuracy due to the stabilization of the latter, stating that these networks could have been trained for fewer epochs.  However, our results achieved higher accuracies than \cite{ArtistIdCNN406}, \cite{Saleh2015} and \cite{mensink2014}.
+In Figure \ref{fig:acctransfer}, instead, we see the trends for each CNN trained with transfer learning. In all of them, after few epochs, an increase in the trend's slope is noted. This corresponds to the moment when the network is allowed to update not only the fully-connected layers' weights, but also those of all layers as previous explained in \ref{ImplDet}, adapting the whole CNN to artist identification task.\\
+Moreover, we can see that GoogLeNet and ResNeXt, after roughly 10 epochs, are affected by overfitting. In fact there is an increasing difference between training accuracy and validation accuracy due to the stabilization of the latter, stating that these networks could have been trained for fewer epochs.  However, our results achieved higher accuracies than \cite{ArtistIdCNN406}, \cite{Saleh2015} and \cite{mensink2014}.
 
 
 \begin{figure}[htp]
@@ -362,14 +359,8 @@ In future work, we would like to deal with a task that could be considered relat
 	\newblock Artist Identification with Convolutional Neural Networks, \newblock 2017
 	
 	\bibitem{ArtGANDataset}
-	\textbf{Dataset:}
+	Dataset:
 	\url{https://github.com/cs-chan/ArtGAN/tree/master/WikiArt Dataset}
-	
-	\bibitem{Lij2012}
-	E. H. J. Li, L. Yao and J. Z. Wang. \newblock Rhythmic brushstrokes
-	distinguish van gogh from his contemporaries: Findings via
-	automated brushstroke extractions. IEEE Trans. Pattern
-	Anal. Mach. Intell, \newblock 2012.
 		
 	\bibitem{lombardi05}
 	T. E. Lombardi. \newblock The classification of style in fine-art painting. ETD Collection for Pace University, \newblock 2005.
